@@ -1,3 +1,8 @@
+2014-06-25  Roland McGrath  <roland@hack.frob.com>
+
+	* sysdeps/unix/sysv/linux/microblaze/arch-fork.h: New file.
+	* sysdeps/unix/sysv/linux/microblaze/nptl/fork.c: File removed.
+
 2014-06-25  Joseph Myers  <joseph@codesourcery.com>
 
 	* sysdeps/unix/sysv/linux/dl-opendir.c (__ASSUME_O_CLOEXEC): Do
